--- a/reporte.Rmd
+++ b/reporte.Rmd
@@ -26,7 +26,12 @@ knitr::opts_chunk$set(
 
 ```{r message=FALSE, warning=FALSE, include=FALSE}
 packages <- c(
-  "tidyverse",
+  "dplyr",
+  "purrr",
+  "stringr",
+  "forcats",
+  "ggplot2",
+  "tidyr",
   "janitor",
   "readxl",
   "plotly",
@@ -37,6 +42,7 @@ packages <- c(
   "writexl",
   "data.table",
   "scales",
+  "DT",
   "zoo"
 )
 
